--- a/templates/layout.html
+++ b/templates/layout.html
@@ -43,16 +43,16 @@
     </title>
     <!-- Bootstrap core CSS -->
 
-    <link href="{% static 'core_blog/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet" media="none" onload="if(media!='all')media='all'">
+    <link href="{% static 'core_blog/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link href="{% static 'core_blog/css/clean-blog.min.css' %}" rel="stylesheet" media="none" onload="if(media!='all')media='all'">
-    <link href="{% static 'app.min.css' %}" rel="stylesheet" media="none" onload="if(media!='all')media='all'">
-    <link href="{% static 'core_blog/css/github.css' %}" rel="stylesheet" media="none" onload="if(media!='all')media='all'">
+    <link href="{% static 'core_blog/css/clean-blog.min.css' %}" rel="stylesheet">
+    <link href="{% static 'app.min.css' %}" rel="stylesheet">
+    <link href="{% static 'core_blog/css/github.css' %}" rel="stylesheet">
     
     <!-- Custom fonts for this template -->
-    <link href="{% static 'core_blog/vendor/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css" media="none" onload="if(media!='all')media='all'">
-    <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css' media="none" onload="if(media!='all')media='all'">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css' media="none" onload="if(media!='all')media='all'">
+    <link href="{% static 'core_blog/vendor/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     
     {% block css %}
     {% endblock css %}
