altered shadow effect

--- a/core_blog/templates/core_blog/category_detail.html
+++ b/core_blog/templates/core_blog/category_detail.html
@@ -3,9 +3,9 @@
 
 {% block title %}
   {{ page_title }} | {{ block.super }}
-{% endblock title 
+{% endblock title %}
 
-<blockquote</blockquote>
+
 {% block header %}
     <!-- Page Header -->
     <header class="masthead" style="background-image: url({% static 'core_blog/img/home-bg1.jpg' %} )">
