--- a/core_blog/templates/core_blog/post_list.html
+++ b/core_blog/templates/core_blog/post_list.html
@@ -12,7 +12,7 @@
                     {{ post.title }}
                   </h2>
                     <h6 class="post-subtitle">
-                      {% if post.in_future %}
+                      {% if post.is_published %}
                         <span style="color: orange">future Post</span>
                       {% endif %}
                   </h6>
