--- a/core_blog/templates/core_blog/category_detail.html
+++ b/core_blog/templates/core_blog/category_detail.html
@@ -55,7 +55,7 @@
                     {{ post.title }}
                   </h2>
                     <h6 class="post-subtitle">
-                      {% if post.is_published %}
+                      {% if not post.is_published %}
                         <span style="color: orange">future Post</span>
                       {% endif %}
                   </h6>
