--- a/core_blog/templates/core_blog/post_detail.html
+++ b/core_blog/templates/core_blog/post_detail.html
@@ -44,7 +44,7 @@
                 {% endif %}
               <h2 class="subheading">{{ post.description }}</h2>
               <span class="meta">Posted by
-                <a href="#">{{ post.author__username|capfirst }}</a>
+                <a href="#">{{ post.author|capfirst }}</a>
                 on {{ post.publish|date:'F d, Y' }}
                 {% if post.draft  %}
                   <span style="color: red">Draft</span>
