--- a/templates/layout.html
+++ b/templates/layout.html
@@ -48,12 +48,12 @@
     <link href="{% static 'core_blog/css/clean-blog.min.css' %}" rel="stylesheet">
     <link href="{% static 'app.min.css' %}" rel="stylesheet">
     <link href="{% static 'core_blog/css/github.css' %}" rel="stylesheet">
-    
+
     <!-- Custom fonts for this template -->
     <link href="{% static 'core_blog/vendor/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-    
+
     {% block css %}
     {% endblock css %}
 
@@ -73,7 +73,7 @@
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="site-heading">
               <h1>Fosstack</h1>
-              <span class="subheading">A Blog for Pythonista by Pycopath.</span>
+              <span class="subheading">A Blog for Pythonista and Djangonaut.</span>
             </div>
           </div>
         </div>
