--- a/core_blog/templates/core_blog/post_detail.html
+++ b/core_blog/templates/core_blog/post_detail.html
@@ -46,7 +46,7 @@
               <span class="meta">Posted by
                 <a href="#">{{ post.author.first_name|capfirst }}</a>
                 on {{ post.publish|date:'F d, Y' }}&nbsp;&nbsp;
-                <i class="fa fa-eye" aria-hidden="true"></i><span id="hits"> {{ post.view_count }}</span> views
+                <span id="hits" style="display:inline-block"> <i class="fa fa-eye" aria-hidden="true"></i> {{ post.view_count }} views</span>
                 {% if post.draft  %}
                   <span style="color: red">Draft</span>
                 {% endif %}
