--- a/core_blog/templates/core_blog/about.html
+++ b/core_blog/templates/core_blog/about.html
@@ -33,7 +33,7 @@
             </div>
           </div>
 
-          <div class="shadow col-xs-2">
+          <div class="shadow col-xs-2 mb-3">
             <div class="LI-profile-badge"  data-version="v1" data-size="large" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="mohi7solanki"><a class="LI-simple-link" href='https://in.linkedin.com/in/mohi7solanki?trk=profile-badge'>Mohit Solanki</a>
             </div>
           </div>
