--- a/core_blog/templates/core_blog/blocks/navbar.html
+++ b/core_blog/templates/core_blog/blocks/navbar.html
@@ -40,7 +40,7 @@
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
             </div>
             <div class="modal-body">
-                <form role="form">
+                <form role="form" method="get" action="/" accept-charset="utf-8">
                     <div class="form-group">
                         <input autofocus type="text" name="q" class="form-control" placeholder="Search..." id="mkdocs-search-query">
                     </div>
