--- a/static/app.css
+++ b/static/app.css
@@ -8,3 +8,4 @@
 .shadow{-webkit-box-shadow: 0px 0px 129px -15px rgba(199,197,199,1);
 -moz-box-shadow: 0px 0px 129px -15px rgba(199,197,199,1);
 box-shadow: 0px 0px 129px -15px rgba(199,197,199,1);}
+.mce-fullscreen {  z-index: 1050!important;  }
