--- a/templates/layout.html
+++ b/templates/layout.html
@@ -39,7 +39,7 @@
 
     <title>
     {% block title %}
-      Fosstack Blog
+      Fosstack
     {% endblock title %}
     </title>
     <!-- favicon -->
