bugfix/ edit pencil for user on his post

--- a/core_blog/templates/core_blog/post_list.html
+++ b/core_blog/templates/core_blog/post_list.html
@@ -27,7 +27,7 @@
                 <p class="post-meta">Posted by
                   <a href="#">{{ post.writer|capfirst }}</a>
                    on {{ post.publish|date:'F d, Y' }}
-                   {% if user.is_superuser or user == post.writer %}
+                   {% if user.is_superuser or user == post.author %}
                      &nbsp;<a href="{% url 'blog:post_update' post.slug %}">
                       <i class="fa fa-pencil" aria-hidden="true"></i>
                       </a>
